--- a/finalProject/templates_chiu/myPage.html
+++ b/finalProject/templates_chiu/myPage.html
@@ -40,6 +40,64 @@
         </div> -->
     </div>
     
+<div class= "eyeType"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "nightType"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "whiteblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "whitegreen"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "whiteindigo"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "whiteblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "whitepurple"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "whitepink"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "whitered"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "whiteorange"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "blackwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "blackgreen"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "blackindigo"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "blackblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "blackpurple"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "blackpink"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "blackred"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "blackorange"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "whitegray"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "greenblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "indigoblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "blueblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "purpleblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "pinkblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "redblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "orangeblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "graywhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "greenwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "indigowhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "bluewhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "purplewhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "pinkwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "redwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "orangewhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "bluegray"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "preetygreen"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "justblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "preetyblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "preetypurple"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "preetypink"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "preetybrown"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "preetyorange"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "preetydarkblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "preetyindigo"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "darkgreenwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "pinkpurple"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "redyellow"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "orangetwoblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "webcolor"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "origin"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "yellowindigo"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "coral"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "graygray"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "bone"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "bakery"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "test"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+<div class= "test"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
     </script>
     <script src="./static/myPageMain.js">
