--- a/finalProject/templates_chiu/index_1.html
+++ b/finalProject/templates_chiu/index_1.html
@@ -55,8 +55,7 @@
        </div>
 
        <div id= "regdiv">
-            <span class="closebtn">
-                <a href="#">✖</a>
+            <span class="closebtn">&times;
             </span>
         <form method="POST" action={{ url_for('register') }}>
             <table style= "width: 100%;">
