--- a/finalProject/templates_chiu/bookMenu.html
+++ b/finalProject/templates_chiu/bookMenu.html
@@ -95,7 +95,7 @@
     <footer>
         <hr width="100%">
         <p style="text-align: center;">
-            <br>Copyright&nbsp©<br>
+            <br>Copyright&nbsp&copy<br>
             2019 NTOU CS 2A<br>
             00757015&nbspChiu + 00757051&nbspHuang<br>
             - Look who's talking! -
