--- a/finalProject/templates_chiu/myPage.html
+++ b/finalProject/templates_chiu/myPage.html
@@ -10,13 +10,16 @@
 </head>
 
 <body>
+    <div class= "elsePart">
     <a href={{ url_for('index') }}> 
         <img src= "./static/logo.png">
     </a>
     <span id = "tt">
         <br><br>&nbsp&nbsp&nbsp尼蠔一絲閱讀<br><br>
     </span>
+    </div>
     <div id="navPart">
+        <button id= "smallScreen">&rarr;&larr;</button>
         <nav>
             傲嬌老公哪裡跑
         </nav>
@@ -28,75 +31,82 @@
                 林峰還沒反應過來，就被張雅茹這女人狠狠一腳踹到了床下，他沒想到張雅茹在床上這麼彪悍，這女人以後要是跟自己睡一張床，指不定把自己折騰成什麼樣。他剛揉了揉疼得發麻的屁股，抬頭時，卻看見張雅茹嗖地一下就從床上坐直了身體，並下意識的將被褥裹在身上，戰戰兢兢說道︰“你——怎麼在這里？”穿著睡衣的林峰慢慢地從地板上站了起來，揉了揉屁股，解釋道︰“這是我家。”“你家？”張雅茹愣了一下，扭頭掃了一眼房間，發現這里十分陌生。張雅茹又低頭看了一眼自己所睡的床，頓時反應過來，裹著被子下了床，抓狂的在房間里尋覓了一圈，最終把目光鎖定在電腦桌上的那把剪刀，一把抓起剪刀攥在手里，對林峰咬牙切齒的怒斥道︰“你這個混蛋，我要殺了你！”林峰見她抓起了剪刀，下意識的後退，並與她在十平方不到的臥室里展開了激烈的追逐戰，他知道被張雅茹追上了，今天非死即傷。“我要殺你了！”張雅茹左手掖著裹著身體的被褥，右手攥著剪刀一個勁的追他。但是，張雅茹沒想到林峰跑起來身輕如燕，動作敏捷，還在床上來回翻跟頭，她追了好幾圈，連林峰的身體都被踫到一下，氣得她喘著粗氣罵道︰“你混蛋！我要殺了你！”林峰站在床上，忙不迭的解釋道︰“張大總裁，你別沖動，你听我解釋，不是你想的那樣，咱們什麼都沒有……”張雅茹咬牙切齒的說︰“你個卑鄙小人，做都做了，還不敢承認，你還是個男人嗎？”林峰聞言，滿臉苦澀的說道︰“張總，關鍵是我什麼都沒做啊！”“什麼都沒做？鬼才相信你！”說罷，張雅茹又打算繼續追逐白振東，今天非剪了他不可，這臭男人實在可惡，之前佔了自己的便宜不說，這回還跟自己同睡一張床，她不敢想昨晚發生了什麼，想想就覺得崩潰。
             </p>
         </div>
-        <div style="padding-top: 10px; text-align:center">
-            <input type="button" value="◀" class="feature" id="preChap">
-            <input type="button" value="－" class="feature" id="fontSmall">
-            <input type="button" value="☰" class="feature" id="menu">
-            <input type="button" value="＋" class="feature" id="fontBig">
-            <input type="button" value="▶" class="feature" id="postChap">
+        <div id= "firstmenu" style="padding-top: 10px; text-align:center">
+            <input type="button" value="&larr;" class="feature" id="preChap">
+            <input type="button" value="&minus;" class="feature" id="fontSmall">
+            <input type="button" value="&equiv;" class="feature" id="menu">
+            <input type="button" value="&plus;" class="feature" id="fontBig">
+            <input type="button" value="&rarr;" class="feature" id="postChap">
         </div>
-        <!-- <div style="padding-top: 10px; text-align:center">
-            <input type="button" value="☖" class="feature" id="goHome">
-        </div> -->
+
+        <div id= "secondmenu" style="padding-top: 10px; text-align:center">
+            <input type="button" value="&#9763; Color" class="adjust" id="changeColor">
+            <input type="button" value="☖ Home" class="adjust" id="goHome"
+                onclick= "location.href = '{{ url_for('myPage') }}'">
+            <input type="button" value="&times; Close" class="adjust" id="closebtn">
+            <input type="button" value="&harr; Whole" class="adjust" id="wholeScreen">
+            <input type="button" value="&#9786; Smile" class="adjust" id="smile">
+        </div>
     </div>
-    
-<div class= "eyeType"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "nightType"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "whiteblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "whitegreen"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "whiteindigo"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "whiteblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "whitepurple"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "whitepink"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "whitered"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "whiteorange"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "blackwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "blackgreen"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "blackindigo"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "blackblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "blackpurple"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "blackpink"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "blackred"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "blackorange"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "whitegray"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "greenblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "indigoblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "blueblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "purpleblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "pinkblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "redblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "orangeblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "graywhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "greenwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "indigowhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "bluewhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "purplewhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "pinkwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "redwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "orangewhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "bluegray"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "preetygreen"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "justblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "preetyblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "preetypurple"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "preetypink"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "preetybrown"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "preetyorange"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "preetydarkblue"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "preetyindigo"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "darkgreenwhite"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "pinkpurple"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "redyellow"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "orangetwoblack"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "webcolor"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "origin"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "yellowindigo"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "coral"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "graygray"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "bone"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "bakery"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "test"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
-<div class= "test"> <P>Hello<br>This is a test<br>part.<br>.....................................</P></div>
+
+    <div id= "colorPart">
+        <span id= "closeColor">&times;</span>
+        <span class= "eyeType">&#9786;</span>
+        <span class= "nightType">&#9786;</span>
+        <span class= "whiteblack">&#9786;</span>
+        <span class= "whitegreen">&#9786;</span>
+        <span class= "whiteindigo">&#9786;</span>
+        <span class= "whiteblue">&#9786;</span>
+        <span class= "whitepurple">&#9786;</span>
+        <span class= "whitepink">&#9786;</span>
+        <span class= "whitered">&#9786;</span>
+        <span class= "whiteorange">&#9786;</span>
+        <span class= "blackwhite">&#9786;</span>
+        <span class= "blackgreen">&#9786;</span>
+        <span class= "blackindigo">&#9786;</span>
+        <span class= "blackblue">&#9786;</span>
+        <span class= "blackpurple">&#9786;</span>
+        <span class= "blackpink">&#9786;</span>
+        <span class= "blackred">&#9786;</span>
+        <span class= "blackorange">&#9786;</span>
+        <span class= "whitegray">&#9786;</span>
+        <span class= "greenblack">&#9786;</span>
+        <span class= "indigoblack">&#9786;</span>
+        <span class= "blueblack">&#9786;</span>
+        <span class= "purpleblack">&#9786;</span>
+        <span class= "pinkblack">&#9786;</span>
+        <span class= "redblack">&#9786;</span>
+        <span class= "orangeblack">&#9786;</span>
+        <span class= "graywhite">&#9786;</span>
+        <span class= "greenwhite">&#9786;</span>
+        <span class= "indigowhite">&#9786;</span>
+        <span class= "bluewhite">&#9786;</span>
+        <span class= "purplewhite">&#9786;</span>
+        <span class= "pinkwhite">&#9786;</span>
+        <span class= "redwhite">&#9786;</span>
+        <span class= "orangewhite">&#9786;</span>
+        <span class= "bluegray">&#9786;</span>
+        <span class= "preetygreen">&#9786;</span>
+        <span class= "justblue">&#9786;</span>
+        <span class= "preetyblue">&#9786;</span>
+        <span class= "preetypurple">&#9786;</span>
+        <span class= "preetypink">&#9786;</span>
+        <span class= "preetybrown">&#9786;</span>
+        <span class= "preetyorange">&#9786;</span>
+        <span class= "preetydarkblue">&#9786;</span>
+        <span class= "preetyindigo">&#9786;</span>
+        <span class= "darkgreenwhite">&#9786;</span>
+        <span class= "pinkpurple">&#9786;</span>
+        <span class= "redyellow">&#9786;</span>
+        <span class= "orangetwoblack">&#9786;</span>
+        <span class= "webcolor">&#9786;</span>
+        <span class= "origin">&#9786;</span>
+        <span class= "yellowindigo">&#9786;</span>
+        <span class= "coral">&#9786;</span>
+        <span class= "graygray">&#9786;</span>
+        <span class= "bone">&#9786;</span>
+        <span class= "bakery">&#9786;</span>
+</div>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
     </script>
