--- a/finalProject/templates_chiu/myPage.html
+++ b/finalProject/templates_chiu/myPage.html
@@ -42,10 +42,11 @@
         <div id= "secondmenu" style="padding-top: 10px; text-align:center">
             <input type="button" value="&#9763; Color" class="adjust" id="changeColor">
             <input type="button" value="☖ Home" class="adjust" id="goHome"
-                onclick= "location.href = '{{ url_for('myPage') }}'">
+                onclick= "location.href = '{{ url_for('mybookCase') }}'">
             <input type="button" value="&times; Close" class="adjust" id="closebtn">
+            <input type="button" value="&#x1F4d6; list" class="adjust" id="smile"
+                onclick= "location.href = '{{ url_for('bookMenu') }}'">
             <input type="button" value="&harr; Whole" class="adjust" id="wholeScreen">
-            <input type="button" value="&#9786; Smile" class="adjust" id="smile">
         </div>
     </div>
 
