--- a/finalProject/templates_chiu/myPage.html
+++ b/finalProject/templates_chiu/myPage.html
@@ -41,7 +41,7 @@
 
         <div id= "secondmenu" style="padding-top: 10px; text-align:center">
             <input type="button" value="&#9763; Color" class="adjust" id="changeColor">
-            <input type="button" value="☖ Home" class="adjust" id="goHome"
+            <input type="button" value="&#x1F3E0; Home" class="adjust" id="goHome"
                 onclick= "location.href = '{{ url_for('mybookCase') }}'">
             <input type="button" value="&times; Close" class="adjust" id="closebtn">
             <input type="button" value="&#x1F4d6; list" class="adjust" id="smile"
